# superbeads

./: .gitignore  Cargo.toml  README.md
.beads/: metadata.json
frontend/: deno.json  index.html  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/api/: client.ts  types.ts
frontend/src/router/: index.ts
frontend/src/stores/: deals.ts  routes.ts
frontend/src/views/: DealsView.vue  HistoryView.vue  RoutesView.vue
migrations/: 001_initial.sql
src/: baseline.rs  config.rs  dates.rs  dedup.rs  detector.rs  health.rs  lib.rs  notifier.rs  scheduler.rs
src/api/: deals.rs  health.rs  history.rs  mod.rs  routes.rs
src/cli/: backfill.rs  history.rs  mod.rs  status.rs
src/db/: mod.rs  types.rs
src/fetcher/: google.rs  kayak.rs  mod.rs  skyscanner.rs  types.rs
