[package]
name = "flight-tracker"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "tracker"
path = "src/bin/tracker.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (API server)
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto (fingerprinting)
sha2 = "0.10"
hex = "0.4"

# Cron scheduling
tokio-cron-scheduler = "0.10"

# Scraping
scraper = "0.19"

[dev-dependencies]
tokio-test = "0.4"
